feat: added services table
